--- a/index8.html
+++ b/index8.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Expanded Menu with 3D Effect</title>
+        <title>Expanded Menu with 3D Effect and Dividers</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <style>
@@ -51,6 +51,9 @@
             .icon-small {
                 font-size: 0.8rem;
             }
+            .dropdown-divider {
+                border-top: 1px solid #6c757d;
+            }
         </style>
     </head>
     <body>
@@ -67,8 +70,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link d-flex align-items-center" href="#" data-bs-toggle="dropdown">
-                                Services
-                                <i class="bi bi-caret-down-fill ms-3 icon-small"></i>
+                                Services <i class="bi bi-caret-down-fill ms-3 icon-small"></i>
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
@@ -83,11 +85,33 @@
                                         <li class="nav-item">
                                             <a class="dropdown-item" href="#">UI/UX Design</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="dropdown-item" href="#">Graphic Design</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="dropdown-item" href="#">Brand Identity</a>
+                                        <li class="nav-item dropdown-submenu">
+                                            <a class="dropdown-item d-flex align-items-center" href="#">
+                                                Graphic Design
+                                                <i class="bi bi-caret-right-fill icon-small"></i>
+                                            </a>
+                                            <ul class="dropdown-menu">
+                                                <li class="nav-item">
+                                                    <a class="dropdown-item" href="#">Logos</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="dropdown-item" href="#">Flyers</a>
+                                                </li>
+                                                <li class="nav-item dropdown-submenu">
+                                                    <a class="dropdown-item d-flex align-items-center" href="#">
+                                                        Posters
+                                                        <i class="bi bi-caret-right-fill icon-small"></i>
+                                                    </a>
+                                                    <ul class="dropdown-menu">
+                                                        <li class="nav-item">
+                                                            <a class="dropdown-item" href="#">Concert Posters</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="dropdown-item" href="#">Movie Posters</a>
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
                                         </li>
                                         <li class="nav-item dropdown-submenu">
                                             <a class="dropdown-item d-flex align-items-center" href="#">
@@ -101,8 +125,19 @@
                                                 <li class="nav-item">
                                                     <a class="dropdown-item" href="#">Animation</a>
                                                 </li>
-                                                <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">Game Design</a>
+                                                <li class="nav-item dropdown-submenu">
+                                                    <a class="dropdown-item d-flex align-items-center" href="#">
+                                                        Game Design
+                                                        <i class="bi bi-caret-right-fill icon-small"></i>
+                                                    </a>
+                                                    <ul class="dropdown-menu">
+                                                        <li class="nav-item">
+                                                            <a class="dropdown-item" href="#">Character Design</a>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="dropdown-item" href="#">Environment Design</a>
+                                                        </li>
+                                                    </ul>
                                                 </li>
                                             </ul>
                                         </li>
@@ -111,9 +146,11 @@
                                 <li class="nav-item">
                                     <a class="dropdown-item" href="#">Mobile Apps</a>
                                 </li>
+                                <li class="nav-item dropdown-divider"></li>
                                 <li class="nav-item">
                                     <a class="dropdown-item" href="#">SEO Services</a>
                                 </li>
+                                <li class="nav-item dropdown-divider"></li>
                                 <li class="nav-item dropdown-submenu">
                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                         Marketing
@@ -126,8 +163,20 @@
                                         <li class="nav-item">
                                             <a class="dropdown-item" href="#">Content Creation</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="dropdown-item" href="#">Advertising</a>
+                                        <li class="nav-item dropdown-divider"></li>
+                                        <li class="nav-item dropdown-submenu">
+                                            <a class="dropdown-item d-flex align-items-center" href="#">
+                                                Advertising
+                                                <i class="bi bi-caret-right-fill icon-small"></i>
+                                            </a>
+                                            <ul class="dropdown-menu">
+                                                <li class="nav-item">
+                                                    <a class="dropdown-item" href="#">Google Ads</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="dropdown-item" href="#">Facebook Ads</a>
+                                                </li>
+                                            </ul>
                                         </li>
                                     </ul>
                                 </li>
