--- a/index8.html
+++ b/index8.html
@@ -57,24 +57,32 @@
         </style>
     </head>
     <body>
+        <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">abdp</a>
+                <a class="navbar-brand" href="#">
+                    abdp
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link active" href="#">
+                                Home
+                            </a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link d-flex align-items-center" href="#" data-bs-toggle="dropdown">
-                                Services <i class="bi bi-caret-down-fill ms-3 icon-small"></i>
+                                Services
+                                <i class="bi bi-caret-down-fill ms-3 icon-small"></i>
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="dropdown-item" href="#">Web Development</a>
+                                    <a class="dropdown-item" href="#">
+                                        Web Development
+                                    </a>
                                 </li>
                                 <li class="nav-item dropdown-submenu">
                                     <a class="dropdown-item d-flex align-items-center" href="#">
@@ -83,7 +91,9 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a class="dropdown-item" href="#">UI/UX Design</a>
+                                            <a class="dropdown-item" href="#">
+                                                UI/UX Design
+                                            </a>
                                         </li>
                                         <li class="nav-item dropdown-submenu">
                                             <a class="dropdown-item d-flex align-items-center" href="#">
@@ -92,10 +102,14 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">Logos</a>
+                                                    <a class="dropdown-item" href="#">
+                                                        Logos
+                                                    </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">Flyers</a>
+                                                    <a class="dropdown-item" href="#">
+                                                        Flyers
+                                                    </a>
                                                 </li>
                                                 <li class="nav-item dropdown-submenu">
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
@@ -104,10 +118,14 @@
                                                     </a>
                                                     <ul class="dropdown-menu">
                                                         <li class="nav-item">
-                                                            <a class="dropdown-item" href="#">Concert Posters</a>
+                                                            <a class="dropdown-item" href="#">
+                                                                Concert Posters
+                                                            </a>
                                                         </li>
                                                         <li class="nav-item">
-                                                            <a class="dropdown-item" href="#">Movie Posters</a>
+                                                            <a class="dropdown-item" href="#">
+                                                                Movie Posters
+                                                            </a>
                                                         </li>
                                                     </ul>
                                                 </li>
@@ -120,10 +138,14 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">3D Modeling</a>
+                                                    <a class="dropdown-item" href="#">
+                                                        3D Modeling
+                                                    </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">Animation</a>
+                                                    <a class="dropdown-item" href="#">
+                                                        Animation
+                                                    </a>
                                                 </li>
                                                 <li class="nav-item dropdown-submenu">
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
@@ -132,10 +154,14 @@
                                                     </a>
                                                     <ul class="dropdown-menu">
                                                         <li class="nav-item">
-                                                            <a class="dropdown-item" href="#">Character Design</a>
+                                                            <a class="dropdown-item" href="#">
+                                                                Character Design
+                                                            </a>
                                                         </li>
                                                         <li class="nav-item">
-                                                            <a class="dropdown-item" href="#">Environment Design</a>
+                                                            <a class="dropdown-item" href="#">
+                                                                Environment Design
+                                                            </a>
                                                         </li>
                                                     </ul>
                                                 </li>
@@ -144,11 +170,15 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" href="#">Mobile Apps</a>
+                                    <a class="dropdown-item" href="#">
+                                        Mobile Apps
+                                    </a>
                                 </li>
                                 <li class="nav-item dropdown-divider"></li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" href="#">SEO Services</a>
+                                    <a class="dropdown-item" href="#">
+                                        SEO Services
+                                    </a>
                                 </li>
                                 <li class="nav-item dropdown-divider"></li>
                                 <li class="nav-item dropdown-submenu">
@@ -158,10 +188,14 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a class="dropdown-item" href="#">Social Media</a>
+                                            <a class="dropdown-item" href="#">
+                                                Social Media
+                                            </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="dropdown-item" href="#">Content Creation</a>
+                                            <a class="dropdown-item" href="#">
+                                                Content Creation
+                                            </a>
                                         </li>
                                         <li class="nav-item dropdown-divider"></li>
                                         <li class="nav-item dropdown-submenu">
@@ -171,10 +205,14 @@
                                             </a>
                                             <ul class="dropdown-menu">
                                                 <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">Google Ads</a>
+                                                    <a class="dropdown-item" href="#">
+                                                        Google Ads
+                                                    </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="dropdown-item" href="#">Facebook Ads</a>
+                                                    <a class="dropdown-item" href="#">
+                                                        Facebook Ads
+                                                    </a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -183,18 +221,25 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="#">
+                                Portfolio
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">
+                                About
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#">
+                                Contact
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
