--- a/index9.html
+++ b/index9.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <style>
             .menu-container {
-                width: 250px;
+                width: 200px;
                 background-color: #000; /* Latar belakang menu hitam */
                 padding: 1rem;
                 border-radius: 8px;
@@ -18,7 +18,7 @@
                 padding: 10px 15px;
                 margin-bottom: 5px;
                 display: block;
-                font-weight: bold;
+                <!-- font-weight: bold; -->
             }
             .nav-link:hover,
             .nav-item.dropdown-submenu:hover > .nav-link {
@@ -81,7 +81,8 @@
                     </a>
                     <div class="dropdown-submenu">
                         <a class="dropdown-item d-flex align-items-center" href="#">
-                            Design <i class="bi bi-caret-right-fill icon-small"></i>
+                            Design - Special User Interface
+                            <i class="bi bi-caret-right-fill icon-small"></i>
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">
