--- a/index8.html
+++ b/index8.html
@@ -94,7 +94,7 @@
                                     </li>
                                     <li class="nav-item dropdown-submenu">
                                         <a class="dropdown-item d-flex align-items-center" href="#">
-                                            Design
+                                            Design - Special User Interface
                                             <i class="bi bi-caret-right-fill icon-small"></i>
                                         </a>
                                         <ul class="dropdown-menu">
