index8.html index9.html

--- a/index8.html
+++ b/index8.html
@@ -84,7 +84,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link d-flex align-items-center" href="#" data-bs-toggle="dropdown">
                                     Services
-                                    <i class="bi bi-caret-down-fill ms-3"></i>
+                                    <i class="bi bi-caret-down-fill icon-small ms-3"></i>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
