DISABLED MENU/SUBMENU

--- a/Menu1001/index1001.html
+++ b/Menu1001/index1001.html
@@ -162,10 +162,10 @@
         -->
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
-        <!-- SmartMenus jQuery plugin -->
+        <!-- SmartMenus jQuery PLUGIN -->
         <!-- <script type="text/javascript" src="https://www.unidocs.co.uk/assets/smartmenus/jquery.smartmenus.js"></script> -->
         <script type="text/javascript" src="jquery.smartmenus.js"></script>
-        <!-- SmartMenus jQuery Bootstrap Addon -->
+        <!-- SmartMenus jQuery Bootstrap ADDON -->
         <!-- <script type="text/javascript" src="https://www.unidocs.co.uk/assets/smartmenus/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script> -->
         <script type="text/javascript" src="jquery.smartmenus.bootstrap.js"></script>
     </body>
